--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ name: Electric1447
 author: Itai Levin
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: Coming Soon
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/avatar_round.png
 
 #
 # Flags below are optional
