--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Electric1447
 author: Itai Levin
 
 # Short bio or description (displayed in the header)
-description: Coming Soon
+description: The Worst Programmer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/avatar_round.png
