--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Electric1447
 author: Itai Levin
 
 # Short bio or description (displayed in the header)
-description: The Worst Programmer
+description: The World's Worst Programmer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/avatar_round.png
@@ -34,6 +34,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
+  xda: Electric1447
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
