--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
-  xda: Electric1447
+  xda: 9178799
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
