--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
+  reddit: Electric1447
   xda: 9178799
 
 
